--- a/apps/cv-portfolio/src/styles/global.css
+++ b/apps/cv-portfolio/src/styles/global.css
@@ -18,20 +18,29 @@ body {
   font-family: inherit;
   line-height: inherit;
   margin: 0;
+  transition:
+    background-color 0.5s,
+    color 0.5s;
 }
 
-*, ::before, ::after {
+*,
+::before,
+::after {
   box-sizing: border-box;
   border-width: 0;
   border-style: solid;
   border-color: currentColor;
 }
 
-h1, h2, p, pre {
+h1,
+h2,
+p,
+pre {
   margin: 0;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-size: inherit;
   font-weight: inherit;
 }
@@ -77,8 +86,8 @@ svg {
   letter-spacing: 0.02em;
 }
 
-.reduced-motion *, 
-.reduced-motion *::before, 
+.reduced-motion *,
+.reduced-motion *::before,
 .reduced-motion *::after {
   animation: none !important;
   transition: none !important;
